FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<org.chromium.chrome.browser.keyboard_accessory.sheet_tabs.PasswordAccessoryInfoView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical|start"
    android:fillViewport="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingStart="@dimen/keyboard_accessory_suggestion_padding"
    android:paddingEnd="@dimen/keyboard_accessory_suggestion_padding"
    android:layout_marginTop="@dimen/keyboard_accessory_sheet_top_margin"
    android:layout_marginBottom="@dimen/keyboard_accessory_sheet_bottom_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/password_info_title"
        android:paddingTop="@dimen/keyboard_accessory_sheet_bottom_margin"
        android:paddingBottom="@dimen/keyboard_accessory_sheet_bottom_margin"
        android:gravity="center_vertical|start"
        android:textAppearance="@style/TextAppearance.TextLarge.Secondary"
        android:minHeight="@dimen/keyboard_accessory_sheet_title_height"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:gravity="center_vertical|start"
        android:fillViewport="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <org.chromium.components.browser_ui.widget.chips.ChipView
            android:id="@+id/suggestion_text"
            android:gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            style="@style/InputChip" />

        <Space
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <ImageView
            android:id="@+id/favicon"
            android:layout_width=
                "@dimen/keyboard_accessory_suggestion_icon_size"
            android:layout_height=
                "@dimen/keyboard_accessory_suggestion_icon_size"
            android:importantForAccessibility="no"
            android:layout_gravity="center"/>

    </LinearLayout>

    <org.chromium.components.browser_ui.widget.chips.ChipView
        android:id="@+id/password_text"
        android:gravity="center_vertical|start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/InputChip" />

    <View style="@style/HorizontalDivider"
        android:layout_marginTop=
            "@dimen/keyboard_accessory_sheet_divider_margin"
        android:layout_marginBottom="0dp" />

</org.chromium.chrome.browser.keyboard_accessory.sheet_tabs.PasswordAccessoryInfoView>
